[package]
name = "lastshot"
version = "0.1.0"
authors = ["brunoczim <brunoczim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "^0.2.22"
features = ["sync"]

[dev-dependencies.tokio]
version = "^0.2.22"
features = [
    "sync",
    "rt-threaded",
    "fs",
    "time",
    "macros"
]
